@@ -35,6 +35,9 @@ define script(28,mapchangerkeylistener,none)
 # globals 0 to 4 are used
 global variable (1024,highval)
 
+global variable (5, layer)
+global variable (6, tileset)
+
 script,makesuseofretvals,begin
   show value (sum of some stuff)
 end
@@ -393,7 +396,44 @@ script, map changer key listener, begin
     reset map state
   )
   if (key is pressed(key:d)) then (
-    reset map state (mapstate:all, true)
+    reset map state (mapstate:all)
+  )
+
+  if (key is pressed(key:numpad0)) then (layer := -1)
+  if (key is pressed(key:numpad1)) then (layer := 0)
+  if (key is pressed(key:numpad2)) then (layer := 1)
+  if (key is pressed(key:numpad3)) then (layer := 2)
+
+  #Nb: TEST.RPG comes with only 1 tileset
+  if (key is pressed(key:tilde)) then (tileset := tileset:default)
+  if (key is pressed(key:0)) then (tileset := 0)
+  if (key is pressed(key:1)) then (tileset := 1)
+  if (key is pressed(key:2)) then (tileset := 2)
+  if (key is pressed(key:3)) then (tileset := 3)
+  if (key is pressed(key:4)) then (tileset := 4)
+
+  $31 = "selected layer: "
+  append number (31, layer)
+  $31 + " selected tileset: "  
+  append number (31, tileset)
+  show string (31)
+
+  if (key is pressed(key:c)) then (
+    change tileset (tileset, layer)
+  )
+  if (key is pressed(key:t)) then (
+    load tileset (tileset, layer)
+  )
+  if (key is pressed(key:z)) then (
+    $31 = "layer "
+    append number (31, layer)
+    $31 + " using tileset "
+    if (layer == -1) then (
+      append number (31, get map tileset)
+    ) else (
+      append number (31, layer tileset (layer))
+    )
+    show string (31)
   )
 end
 
